[tool.poetry]
name = "nimble-test-task"
version = "0.1.0"
description = ""
authors = ["skorodenko <72010957+skorodenko@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "nimble_test_task"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.1.2"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
